kyverno-101-with-linkerd/kyverno/add-memory-limits/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-memory-limits
policies:
  - add-memory-limits.yaml
resources:
  - resource.yaml
results:
  - policy: add-memory-limits
    rule: add-memory-limits
    resources:
    - no-resources
    - only-requests
    kind: Pod
    result: pass

  - policy: add-memory-limits
    rule: add-memory-limits
    resources:
    - only-limits
    - requests-and-limits
    kind: Pod
    result: skip
